--- a/pages/login.html
+++ b/pages/login.html
@@ -15,6 +15,7 @@
 				<li><a href="registration.html">Registration</a></li>
 				<li><a href="reviews.html">Reviews</a></li>
 				<li><a href="https://www.playvalorant.com/">Download</a></li>
+				<li><a href="ref.html">References</a></li>
 			</ul>
 		</nav>
 		<div class="form-box2">
