--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -16,6 +16,7 @@
 				<li><a href="registration.html">Registration</a></li>
 				<li><a href="reviews.html">Reviews</a></li>
 				<li><a href="https://www.playvalorant.com/">Download</a></li>
+				<li><a href="ref.html">References</a></li>
 			</ul>
 		</nav>
 
