--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<li><a href="pages/registration.html">Registration</a></li>
 				<li><a href="pages/reviews.html">Reviews</a></li>
 				<li><a href="https://www.playvalorant.com/">Download</a></li>
+				<li><a href="pages/ref.html">References</a></li>
 			</ul>
 		</nav>
 	</div>
