--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Website ni Hyra</title>
+	<title>Valoranked</title>
 	<link rel="stylesheet" type="text/css" href="styles/styles.css"/>
 </head>
 <body>
