--- a/pages/ref.html
+++ b/pages/ref.html
@@ -24,9 +24,9 @@
         <br>
         <br>
         <br>
-        <div class="border"></div>
-        <div class="row">
-          <div class="col">
+        <div class="border0"></div>
+        <div class="row0">
+          <div class="col0">
             <div class="testimonial0">
                 <ul>
                     <li>Discovering Hard-Coded Application Credentials Across the Enterprise. Support community. (n.d.). <br>https://cyberark-customers.force.com/s/article/Discovering-Hard-Coded-Application-Credentials-Across-the-Enterprise</li><br>
